# BevyJam4_BigEntities

./: Cargo.toml  README.md  index.html
.cargo/: config
assets/worlds/: main.world.ron
crates/big_entities_lib/: Cargo.toml
crates/big_entities_lib/src/: assets.rs  board.rs  chunks.rs  lib.rs  pawn.rs  pickup.rs  states.rs  ui.rs
crates/big_entities_lib/src/assets/worlds/: main.world.ron
crates/big_entities_lib/src/pawn/: board_movement.rs  follow_camera.rs  free_movement.rs  third_person.rs
crates/big_entities_lib/src/states/: game_over.rs  loading.rs  menu.rs  playing.rs
crates/big_entities_lib/src/ui/: fps.rs  score.rs
crates/mobile/: Cargo.toml  Makefile  manifest.yaml
crates/mobile/mobile.xcodeproj/: project.pbxproj
crates/mobile/src/: lib.rs
credits/: CREDITS.md
src/: main.rs
