[package]
name = "big_entities_mobile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "big_entities_mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
big_entities_lib = { path = "../big_entities_lib" }
bevy = { version = "0.12", default-features = false }

# As long as Kira doesn't expose a feature for this, we need to enable it our self
# See https://github.com/tesselode/kira/pull/51
[target."cfg(target_os = \"android\")".dependencies.cpal]
version = "0.15"
features = ["oboe-shared-stdcxx"]

[package.metadata.android]
package = "com.danboyledesign.bevy-jam4-big-entities"
apk_name = "BigEntities"
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 33

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Bevy Jam4: Big Entities"
